# wellfair

./: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  CONCEPTS.md  COPYRIGHT.md  DEMO_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  LOG_ui_utils_refactor.md  NAVIGATION_UPDATE.md  PROJECT_FIXLOG.md  README.md  RELEASE_NOTES_v0.0.2.md  RELEASE_NOTES_v0.0.3.md  SLEEP_ANALYTICS_CHANGES.md  SLEEP_ANALYTICS_GUIDE.md  SLEEP_ANALYTICS_QUICKSTART.md  generate_schema.py  requirements.txt  run.ps1  run.sh  test_sleep_analytics_manual.py
.claude/: launch.json
config/: dataset_mappings.json  ontology_template.yaml
docs/: app.html  app.js  device-bridge.js  device-ui.js  index.html  index.md  manifest.webmanifest  nym-test.html  package-download-ui.js  pair.html  style.css  sw.js
extensions/: __init__.py  base.py  registry.py
instructions/: 20260528-2040-GrokReview.md  AgentDirectoryUpdates.md  broader_structure_grok.md  communications.md  eventsTemporal.md  github_pages_wasm_requirements.md  grok_datasources.md  grok_mentalhealth  pathway_b_rust_wasm.md  sanctuaryMode.md  social_biostatistics  syntheticProfiles.md  update_holograph.md
scripts/: build_stlite.py  download_hra_models.py  generate_pathology.py  generate_persona_exports.py  generate_personas.py  generate_synthetic_export.py
shared-schemas/: INFORMATICS_IMPLEMENTATION_PLAN.md  anatomy-mappings.ttl  biomarker-vocabulary.ttl
wellfare-core/: Cargo.toml
wellfare-core/.cargo/: config.toml
wellfare-core/src/: lib.rs  models.rs  parser.rs  rdf.rs  shapes.rs  store.rs  wasm.rs
(+553 files in other folders)
