[package]
name = "wellfare-core"
version = "0.0.1-dev"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde", "js"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }
