[package]
name = "wellfare-core"
version = "0.0.1-dev"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde", "js"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"
